# yams

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  ROADMAP.md
.githooks/: pre-commit
.github/workflows/: build-linux.yml  build-windows.yml
cmake/: GenerateVersion.cmake  toolchain-msvc-wine.cmake
misc/: CMakeLists.txt  io.github.atuleu.YAMS.desktop.in  io.github.atuleu.YAMS.metainfo.xml
misc/flatpak/: io.github.atuleu.YAMS.yml
resources/icons/: CMakeLists.txt
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MediaPlayer.cpp  MediaPlayer.hpp  PlayerControl.cpp  PlayerControl.hpp  PlayerControl.ui  PlaylistModel.cpp  PlaylistModel.hpp  VideoWidget.cpp  VideoWidget.hpp  main.cpp
src/yams/: CMakeLists.txt  Compositor.cpp  Compositor.hpp  Frame.cpp  Frame.hpp  GstThread.cpp  GstThread.hpp  GstThreadTest.cpp  Logging.cpp  Logging.hpp  LoggingTest.cpp  MediaPipeline.cpp  MediaPipeline.hpp  MediaPlayInfo.hpp  Version.cpp  Version.hpp  VideoOutput.cpp  VideoOutput.hpp  VideoThread.cpp  VideoThread.hpp  VideoWidget.cpp  VideoWidget.hpp  gstQOpenGL.cpp  gstQOpenGL.hpp  gstreamer.hpp  main.cpp  slogQt.hpp  yams.rc.in
src/yams/gstreamer/: Factory.hpp  Memory.hpp  MemoryTest.cpp  Pipeline.cpp  Pipeline.hpp  PipelineTest.cpp  QOpenGL.cpp  QOpenGL.hpp  Thread.cpp  Thread.hpp  ThreadTest.cpp  memoryTest.cpp
src/yams/shaders/: frame.fragment  frame.vertex  sprite.fragment  sprite.vertex
src/yams/utest/: main.cpp
src/yams/utils/: Logging.cpp  LoggingTest.cpp  ObjectPool.hpp  ObjectPoolTest.cpp  Version.cpp  defer.hpp  fractional.hpp  fractionalTest.cpp  slogQt.hpp
src/yams_launcher/: CMakeLists.txt  main.c
